<resources>
    <string name="app_name">Weather App</string>
    <string name="_00_00_c">00:00°C</string>
    <string name="day">Day</string>
    <string name="sunny">Sunny</string>
    <string name="_0000hpa">0000hPa</string>
    <string name="sea">Sea</string>
    <string name="sunset">Sunset</string>
    <string name="_00_00">00:00</string>
    <string name="wind">Wind</string>
    <string name="_0_00_m_s">0.00 m/s</string>
    <string name="sunny1">SUNNY</string>
    <string name="humidity">Humidity</string>
    <string name="_00">00%</string>
    <string name="date">Date</string>
    <string name="_00_00_c1">00:00°C</string>
    <string name="today">Today</string>
</resources>