<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunny_background"
    tools:context=".MainActivity">


    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height='wrap_content'
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/search_bar"
        android:iconifiedByDefault="false"
        android:queryHint="Search for a City"
        android:searchIcon="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/textWithLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:drawablePadding="12dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        app:drawableLeftCompat="@drawable/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/temp"
        app:layout_constraintRight_toRightOf="@id/circle"
        app:layout_constraintLeft_toLeftOf="@id/circle"
        />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/_00_00_c1"
        android:textColor="@color/black"
        android:textSize="45sp"

        android:textStyle="normal"
        app:layout_constraintRight_toRightOf="@id/circle"
        app:layout_constraintLeft_toLeftOf="@id/circle"
        app:layout_constraintTop_toTopOf="@id/circle"
        app:layout_constraintBottom_toBottomOf="@id/circle"
        />

    <TextView
        android:id="@+id/circle"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:background="@drawable/temp_shape"
        android:layout_marginTop="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        />

    <TextView
        android:id="@+id/SUNNY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/sunny"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/circle"
        app:layout_constraintStart_toStartOf="@id/circle"
        app:layout_constraintBottom_toTopOf="@+id/temp"
        />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/day"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/circle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="monospace"
        android:text="@string/date"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/day"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/card_view_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/card_view_bg"
                android:orientation="vertical"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/img_humidity"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/humidity" />

                <TextView
                    android:id="@+id/val_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/_00"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/humidity"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/card_view_bg"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/img_wind"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/wind" />

                <TextView

                    android:id="@+id/val_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/_0_00_m_s"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/wind"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/card_view_bg"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginHorizontal="30dp">

                <ImageView
                    android:id="@+id/img_conditions"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/conditions" />

                <TextView

                    android:id="@+id/val_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sunny1"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="Conditions"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_marginVertical="20dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/card_view_bg"
                android:orientation="vertical"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/img_sunrise"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sunrise" />

                <TextView

                    android:id="@+id/val_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="00:00"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="Sunrise"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/card_view_bg"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/img_sunset"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sunset" />

                <TextView

                    android:id="@+id/val_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/_00_00"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/card_view_bg"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginHorizontal="30dp">

                <ImageView
                    android:id="@+id/img_sea"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sea" />

                <TextView

                    android:id="@+id/val_sea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/_0000hpa"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/sea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sea"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>